--- a/deploy/ansible.cfg
+++ b/deploy/ansible.cfg
@@ -1,3 +1,6 @@
 [defaults]
 roles_path = roles:../../../config/ansible-roles
 # allow_world_readable_tmpfiles = True
+
+[ssh_connection]
+pipelining = True
